# sonic3air-launcher

./: .gitignore  COPYING  meson.build  org.sonic3air.Sonic3AIR.json
data/: meson.build  org.sonic3air.Sonic3AIR.appdata.xml.in  org.sonic3air.Sonic3AIR.desktop.in  org.sonic3air.Sonic3AIR.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  sonic3-rom.c  sonic3-rom.h  sonic3-sound.c  sonic3-sound.h  sonic3-window.c  sonic3-window.h  sonic3-window.ui  sonic3.gresource.xml  style.css
